--- a/package.json
+++ b/package.json
@@ -9,24 +9,19 @@
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build":"npm install && npm install --prefix frontend  "
+    "build": "npm install && npm install --prefix frontend  "
   },
   "dependencies": {
-  
-   
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-  
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
-     "stripe": "^18.5.0",
-    "mongoose": "^8.18.1"
-
-
-     
+    "mongoose": "^8.18.1",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
