Simplify build script in package.json
Updated build script to only install dependencies.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend  "
+    "build": "npm install "
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
