--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js",
+    "dev": "nodemon server.js",
     "start": "node backend/server.js",
     "build": "npm install "
   },
